# lotus-notes-converter

./: INSTALLATION.md  Lotus Notes to React Converter.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
examples/: create_sample_nsf.py  sample.nsf
src/lotus_notes_converter/: __init__.py  cli.py  converter.py  exceptions.py  generator.py  models.py  parser.py
test-output/: package-lock.json  package.json
test-output/public/: index.html
test-output/src/: App.tsx  index.css
test-output/src/components/: Navigation.tsx
test-output/src/components/forms/: DefaultformForm.tsx
test-output/src/components/views/: AlldocumentsView.tsx
test-output/src/data/: appData.json
tests/: __init__.py  test_models.py
