[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotus-notes-converter"
version = "1.0.0"
description = "A Python tool to convert Lotus Notes applications to React applications"
authors = [
    {name = "Manus AI", email = "manus@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Office/Business :: Groupware",
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
lotus-converter = "lotus_notes_converter.cli:main"

[project.urls]
Homepage = "https://github.com/manus-ai/lotus-notes-converter"
Repository = "https://github.com/manus-ai/lotus-notes-converter"
Documentation = "https://lotus-notes-converter.readthedocs.io"
"Bug Tracker" = "https://github.com/manus-ai/lotus-notes-converter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=lotus_notes_converter --cov-report=html --cov-report=term-missing"

